# Project

./: README.md  dune-project  hopcroft.cmi  hopcroft.cmo  notes.txt
TC/: Prof.cmi  Prof.cmo  Prof.ml  a.out  dfa  dfa.cmi  dfa.cmo  dfa.ml  dfa_v2.ml  inputsB  pratica  pratica.cmi  pratica.cmo  pratica.ml  pratica_v  pratica_v2  pratica_v2.cmi  pratica_v2.cmo  pratica_v2.ml  pratica_v3  pratica_v3.cmi  pratica_v3.cmo  pratica_v3.ml  pratica_v4.ml  pratica_v5  pratica_v5.cmi  pratica_v5.cmo  pratica_v5.ml  prof  testar.cmi  testar.cmo  testar.ml  teste  teste.cmi  teste.cmo  teste.txt  trabA.cmi  trabA.cmo  trabA.ml
TC/Tcomp_provas/: .directory
hopcroft/: a.out  hopcroft.cmi  hopcroft.cmo  hopcroft.ml
src/: Brzozowski.ml  brzozowski.ml  dune  hop2.ml  hopcroft.ml  main.ml  sets.ml  setsB.ml  setsH.ml  setsH2.ml  types.ml  union.ml
tests/: t1.in  t2.in  t25.in  t3.in  t4.in  t5.in  t6.in
trash/: hopcroft.ml  setsH.ml
