(lang dune 3.7)

(name dfa_minimization)

(license MIT)

(authors
 "Miguel Marques <miguel.costa.marques@ubi.pt>"
 "Lu\195\173s Pedro Arrojado da Horta <luis.horta@ubi.pt>")

(maintainers
 "Miguel Marques <miguel.costa.marques@ubi.pt>"
 "Lu\195\173s Pedro Arrojado da Horta <luis.horta@ubi.pt>")

(package
 (name dfa_minimization)
 (synopsis "An implementation of DFA minimization algorithms")
 (depends
  (dune :build)))
